# qortex-rust-backend

./: .env  Cargo.toml  Dockerfile  Dockerfile-production  docker-compose.yml
src/: config.rs  main.rs  schema.rs
src/redis/: connection.rs  error.rs  mod.rs  operations.rs
