[package]
name = "qortex-rust-backend"
version = "0.0.1"
edition = "2024"

[env]
RUST_BACKTRACE=1

[dependencies]
once_cell = "1.21"
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
dotenv = "0.15"
diesel = { version = "2.2", features = ["mysql"] }
redis = "0.32"
r2d2 = "0.8"
r2d2_redis = "0.14"

[dev-dependencies]
reqwest = "0.11"
mockito = "1.0"
pretty_assertions = "1.0"
cargo-watch = "8.5"
sqlx-cli = "0.7"
